--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>cv</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="assets/ico/rs_school_js.ico">
+    <link rel="preconnect" href="https://fonts.gstatic.com">  
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <img src="assets/img/avatars.jpg" alt="my avatar">  
