feat: add head, main, footer

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
+    <head></head>
+    <main></main>
+    <footer></footer>
+    
     <img src="assets/img/avatars.jpg" alt="my avatar">  
 </body>
 </html>
