--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">  
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;500;700&display=swap" rel="stylesheet">
 </head>
+
+
 <body>
-    <head></head>
+    <header></header>
     <main></main>
     <footer></footer>
-    
+
     <img src="assets/img/avatars.jpg" alt="my avatar">  
 </body>
 </html>
