feat: add class header

--- a/index.html
+++ b/index.html
@@ -9,11 +9,14 @@
     <link rel="icon" href="assets/ico/rs_school_js.ico">
     <link rel="preconnect" href="https://fonts.gstatic.com">  
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;500;700&display=swap" rel="stylesheet">
+    
 </head>
 
 
 <body>
-    <header></header>
+    <header class = "header">
+        <h1>ALEXANDER BONDAT</h1>
+    </header>
     <main></main>
     <footer></footer>
 
