--- a/index.html
+++ b/index.html
@@ -17,6 +17,18 @@
     <header class = "header">
         <h1>HEADER</h1>
         <div class="container"></div>
+        <nav class="nav">
+            <ul class="nav-list">
+              <li class="nav-item"><a href="#contacts" class="nav-link">Contacts</a></li>
+              <li class="nav-item"><a href="#summary" class="nav-link">Summary</a></li>
+              <li class="nav-item"><a href="#skills" class="nav-link">Skills</a></li>
+              <li class="nav-item"><a href="#code" class="nav-link">Skills</a></li>
+              <li class="nav-item"><a href="#courses" class="nav-link">Skills</a></li>
+              <li class="nav-item"><a href="#projects" class="nav-link">Skills</a></li>
+              <li class="nav-item"><a href="#education" class="nav-link">Skills</a></li>
+              <li class="nav-item"><a href="#english" class="nav-link">Skills</a></li>
+            </ul>
+          </nav>
          
     </header>
     
