--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
     
     <main class = "main">
         <h1>MAIN</h1>
-        <div class="container"></div>
+        <div class="container">
+            <article id="contacts"> <h3>Contacts</h3>
+        </div>
         <img src="assets/img/avatars.jpg" alt="my avatar" height="100px" width="100px">
     </main>
     
