docs: update contacts

--- a/index.html
+++ b/index.html
@@ -36,6 +36,11 @@
         <h1>MAIN</h1>
         <div class="container">
             <article id="contacts"> <h3>Contacts</h3>
+                <ul>
+                    <li><p>Tel: +79243398971</p></li>
+                    <li><p>Email: 2988971@mail.ru</p></li>
+                    <li><p>Discors: Chin#5450</p></li>
+                </ul>
         </div>
         <img src="assets/img/avatars.jpg" alt="my avatar" height="100px" width="100px">
     </main>
