feat: add main-container

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
          
     </header>
     
-    <main class = "main">
+    <main class = "main" class = "main-container">
     <div class="container"></div>
         <section class="section" id="profile">
             <img src="assets/img/avatars.jpg" alt="my avatar" height="100px" width="100px">
