fix: add pading in header

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
     <header class = "header">
-        <div class="container"></div>
+       <div class="container">
         <nav class="nav">
             <ul class="nav-list">
               <li class="nav-item"><a href="#contacts" class="nav-link">Contacts</a></li>
@@ -28,11 +28,11 @@
               <li class="nav-item"><a href="#english" class="nav-link">English</a></li>
             </ul>
           </nav>
-         
+       </div>
     </header>
     
     <main class = "main" class = "main-container">
-    <div class="container"></div>
+      <div class="container"></div>
         <section class="section" id="profile">
             <img src="assets/img/avatars.jpg" alt="my avatar" height="100px" width="100px">
             <h1 class=".section-title">Alexander Bondar</h1>
