feat: add footer

--- a/index.html
+++ b/index.html
@@ -108,7 +108,8 @@
     <footer class = "footer">
         <div class="container">
             <img src="assets/ico/rs_school_js.ico" alt="ico" height="30" width="100px">
-            <p><a href="https://rs.school/js/"></a>rs.school</p>
+            <p><a href="https://rs.school/js/">rs-school</a></p>
+            <p>2021</p>
         </div>
     </footer>
     
