fix: flex section, h2 courses

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         </section>   
         
         <section class="section" id="courses"> 
-            <article id="courses"> <h2 class=".section-title"></h2>Courses</h2>
+            <article id="courses"> <h2 class=".section-title">Courses</h2>
                 <p>https://rs.school/js/</p>
         </section>
         
