fix: footer add link repositori

--- a/index.html
+++ b/index.html
@@ -109,7 +109,8 @@
         <div class="container">
             <img src="assets/ico/rs_school_js.ico" alt="ico" height="30" width="100">
             <p><a href="https://rs.school/js/">rs-school</a></p>
-            <p>2021</p>
+            <p><a href="https://github.com/AlexanderVLRS/rsschool-cv.git">AlexanderVLRS</a></p>
+            <p>© 2022</p>
         </div>
     </footer>
     
